--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@vercel/analytics": "^1.3.2",
+    "gifenc": "^1.0.3",
     "i18next": "^25.6.0",
     "i18next-browser-languagedetector": "^8.2.0",
     "jszip": "^3.10.1",
