feat: enhance SEO and prerendering capabilities
- Updated package.json to include puppeteer for prerendering.
- Modified sitemap.xml to include hreflang links for multiple languages.
- Added prerender.mjs script to generate static HTML for specified routes.
- Updated AlgorithmExplorer, DitheringTool, Home pages to utilize new SEO functions for canonical and OG URLs.
- Refactored seo utility functions to handle language parameters for canonical and OG URLs.
- Adjusted vercel.json to ensure proper routing for prerendered pages.

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,18 @@
 {
   "rewrites": [
     {
+      "source": "/Dithering/Image",
+      "destination": "/Dithering/Image/index.html"
+    },
+    {
+      "source": "/Dithering/Video",
+      "destination": "/Dithering/Video/index.html"
+    },
+    {
+      "source": "/Algorithms",
+      "destination": "/Algorithms/index.html"
+    },
+    {
       "source": "/(.*)",
       "destination": "/index.html"
     }
